--- a/NotesApi.Models/NotesApi.Models.csproj
+++ b/NotesApi.Models/NotesApi.Models.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\Autofac.4.4.0\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FluentValidation, Version=7.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentValidation.7.0.0-beta1\lib\net45\FluentValidation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -65,6 +69,7 @@
     <Compile Include="Commands\DeleteNotesCommand.cs" />
     <Compile Include="Commands\UpdateNoteCommand.cs" />
     <Compile Include="DTOs\NoteDto.cs" />
+    <Compile Include="DTOs\NoteDtoValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\GetNotesQuery.cs" />
     <Compile Include="Queries\LoginQuery.cs" />
